[metadata]
name = yahoojp-byline-feed
version = 0.0.1

[options]
packages = 
    yahoojp_byline
    yahoojp_byline.command
install_requires =
    beautifulsoup4 >= 4.8.2
    html5lib >= 1.0.1
    feedgenerator >= 1.9.1
    requests >= 2.22.0
    python-dateutil >= 2.7.3

[options.entry_points]
console_scripts =
    yahoojp-byline-rss = yahoojp_byline.command.main:main
